--- a/app/src/main/res/layout/lista_contato_fragment.xml
+++ b/app/src/main/res/layout/lista_contato_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,7 +25,7 @@
             android:id="@+id/fab_edit_task_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
+            android:layout_margin="16dp"
             android:src="@drawable/ic_add"
             app:fabSize="normal"
             app:layout_anchor="@id/contentFrame"
