--- a/app/src/main/res/layout/formulario_contato_fragment.xml
+++ b/app/src/main/res/layout/formulario_contato_fragment.xml
@@ -9,4 +9,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
