--- a/app/src/main/res/layout/formulario_contato_fragment.xml
+++ b/app/src/main/res/layout/formulario_contato_fragment.xml
@@ -1,49 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/holder_nome"
-        android:layout_width="match_parent"
-        android:layout_gravity="left"
-        android:layout_height="wrap_content">
 
-
-        <EditText
-            android:id="@+id/nome_contato"
-            android:hint="Nome"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/holder_nome"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="wrap_content">
 
 
-    <LinearLayout
-        android:orientation="horizontal"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/nome_contato"
+                android:hint="Nome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </android.support.design.widget.TextInputLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_password"
-            android:layout_width="380dp"
-            android:layout_gravity="left"
+            android:id="@+id/holder_telefone"
+            android:layout_toLeftOf="@+id/tipo_telefone"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/input_password"
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/telefone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Telefone" />
 
         </android.support.design.widget.TextInputLayout>
 
-        <RelativeLayout
+        <Spinner
+            android:id="@+id/tipo_telefone"
+            android:layout_toLeftOf="@+id/botoes_laterais_telefone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            >
+
+        </Spinner>
+
+        <LinearLayout
             android:id="@+id/botoes_laterais_telefone"
             android:orientation="vertical"
-            android:layout_marginRight="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
 
             <ImageButton
@@ -59,15 +69,13 @@
                 android:id="@+id/menas"
                 android:layout_marginBottom="5dp"
                 android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/clear"
                 android:layout_alignParentBottom="true"
-                android:background="@drawable/button_states"
-                android:layout_height="20dp" />
+                android:background="@drawable/button_states"/>
+        </LinearLayout>
 
-        </RelativeLayout>
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
