--- a/app/src/main/res/layout/formulario_contato_fragment.xml
+++ b/app/src/main/res/layout/formulario_contato_fragment.xml
@@ -1,88 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/holder_nome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/nome_contato"
-                android:hint="Nome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </android.support.design.widget.TextInputLayout>
-
-    <RelativeLayout
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/holder_nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/holder_telefone"
-            android:layout_toLeftOf="@+id/tipo_telefone"
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/nome_contato"
+            android:hint="Nome"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/telefone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Telefone" />
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
-
-        <Spinner
-            android:id="@+id/tipo_telefone"
-            android:layout_toLeftOf="@+id/botoes_laterais_telefone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            >
-
-        </Spinner>
-
-        <LinearLayout
-            android:id="@+id/botoes_laterais_telefone"
-            android:orientation="vertical"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-
-            <ImageButton
-                android:id="@+id/mais"
-                android:layout_width="20dp"
-                android:layout_marginTop="5dp"
-                android:foregroundGravity="top"
-                android:src="@drawable/add"
-                android:background="@drawable/button_states"
-                android:layout_height="20dp" />
-
-            <ImageButton
-                android:id="@+id/menas"
-                android:layout_marginBottom="5dp"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/clear"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/button_states"/>
-        </LinearLayout>
-
-    </RelativeLayout>
-
-
-
-
-
-    <EditText
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/holder_telefone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/sexo_contato"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Sexo" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/grava_contato"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/check"
+        app:fabSize="normal"
+        android:layout_gravity="bottom|right|end" />
 
 </LinearLayout>
