--- a/app/src/main/res/layout/lista_contato_fragment.xml
+++ b/app/src/main/res/layout/lista_contato_fragment.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lista_contatos_recycler_view"
         android:scrollbars="vertical"
+        android:background="@color/colorRecyclerBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,6 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        app:borderWidth="0dp"
+        app:elevation="8dp"
         android:src="@drawable/ic_add"
         app:fabSize="normal"
         android:layout_gravity="bottom|right|end" />
