--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#EF6C00</color>
     <color name="colorPrimaryDark">#E65100</color>
     <color name="colorAccent">#4A148C</color>
+    <color name="colorRecyclerBackground">#EEEEEE</color>
 </resources>
