--- a/app/src/main/res/layout/formulario_contato_fragment.xml
+++ b/app/src/main/res/layout/formulario_contato_fragment.xml
@@ -1,48 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/holder_nome"
+    <LinearLayout
+        android:id="@+id/form_contato_holder"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/nome_contato"
-            android:hint="Nome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/holder_telefone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/sexo_contato"
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Sexo" />
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            card_view:cardCornerRadius="2dp"
+            card_view:contentPadding="10dp">
 
-    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/grava_contato"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/holder_nome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/nome_contato"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Nome" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/holder_telefone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/sexo_contato"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Sexo" />
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+        <include layout="@layout/item_telefone" />
+
+
+    </LinearLayout>
+
+    <com.andexert.library.RippleView
+        android:id="@+id/item_contato_ripple"
+        rv_centered="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:borderWidth="0dp"
-        app:elevation="8dp"
-        android:src="@drawable/check"
-        app:fabSize="normal"
-        android:layout_gravity="bottom|right|end" />
+        android:layout_gravity="bottom|right|end"
+        android:layout_margin="5dp">
 
-</LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/grava_contato"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right|end"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/check"
+            app:borderWidth="0dp"
+            app:elevation="8dp"
+            app:fabSize="normal" />
+    </com.andexert.library.RippleView>
+
+</android.support.design.widget.CoordinatorLayout>
