--- a/app/src/main/res/layout/lista_contato_fragment.xml
+++ b/app/src/main/res/layout/lista_contato_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
@@ -8,23 +7,36 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lista_contatos_recycler_view"
-        android:scrollbars="vertical"
-        android:background="@color/colorRecyclerBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorRecyclerBackground"
+        android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/adiciona_contatos"
+    <com.andexert.library.RippleView
+        android:id="@+id/item_contato_ripple"
+        rv_centered="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:borderWidth="0dp"
-        app:elevation="8dp"
-        android:src="@drawable/ic_add"
-        app:fabSize="normal"
-        android:layout_gravity="bottom|right|end" />
+        android:layout_gravity="bottom|right|end"
+        android:layout_margin="5dp">
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/adiciona_contatos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right|end"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_add"
+            app:borderWidth="0dp"
+            app:elevation="8dp"
+            app:fabSize="normal" />
+
+    </com.andexert.library.RippleView>
 
 </android.support.design.widget.CoordinatorLayout>
